# JuraganAudio-extension

./: LICENSE  README.md  bg.js  manifest.json  offscreen.html  offscreen.js  popup.css  popup.html  popup.js  service-worker.js
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
modules/: eq-graph.js  eq-math.js  main.js  presets.js  visualizer.js
modules/service_worker/: messaging.js  offscreen.js  state.js
src/dsp/: Cargo.toml
src/dsp/src/: lib.rs  sbr.rs
src/dsp/src/analysis/: fft.rs
src/dsp/src/dynamics/: limiter.rs
src/dsp/src/filters/: fir.rs  iir.rs  mod.rs
styles/: base.css  components.css  dashboard.css  layout.css  modal.css  sections.css  variables.css
webgpu/: spectrum-renderer.js
webgpu/shaders/: spectrum.wgsl
worklet/: audio-processor.js  ears_dsp.js  ears_dsp_bg.wasm  juragan_audio_dsp.js  juragan_audio_dsp_bg.wasm  juragan_audio_dsp_bg.wasm.d.ts  package.json
worklet/modules/: sbr.js
