[package]
name = "ears-dsp"
version = "0.1.0"
authors = ["Kevin King"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
console_error_panic_hook = "0.1"

# DSP Dependencies
rustfft = "6.1"           # FFT with SIMD
rubato = "0.14"           # Resampling
wide = "0.7"              # SIMD helpers


[profile.release]
lto = true
opt-level = 3
codegen-units = 1
