[package]
name = "juragan-audio-dsp"
version = "1.0.2"
authors = ["AppsJuragan inc."]
edition = "2021"

[lib]
name = "juragan_audio_dsp"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
console_error_panic_hook = "0.1"

# DSP Dependencies
rustfft = "6.1"           # FFT with SIMD
rubato = "0.14"           # Resampling
wide = "0.7"              # SIMD helpers
num-traits = "0.2"        # For Zero trait

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
